labware-library/src/components/App/styles.module.css
/* app styles */
@import '@opentrons/components/styles';
@import '../../styles/breakpoints.module.css';
@import '../../styles/spacing.module.css';

.app {
  height: 100%;

  /* nav height */
  padding-top: var(--size-mobile-nav);

  &.is_detail_page {
    /* nav + breadcrumbs height */
    padding-top: calc(var(--size-mobile-nav) + var(--size-2));
  }
}

.page {
  position: relative;
}

.sidebar_container {
  padding: var(--spacing-7) var(--spacing-3) 0;

  &.is_detail_page {
    display: none;
  }
}

.content_width_limiter {
  max-width: var(--screen-width-xlarge);
  margin: auto;
}

.content_container {
  width: 100%;
  padding: var(--spacing-5);
  margin: 0;
}

@media (--medium) {
  .app {
    padding-top: var(--size-main-nav);

    &.is_detail_page {
      /* nav + breadcrumbs height */
      padding-top: calc(var(--size-main-nav) + var(--size-2));
    }
  }

  .page {
    height: 100%;
    overflow: hidden;
  }

  .sidebar_container {
    position: absolute;
    top: 0;
    bottom: 0;
    width: var(--size-4);
    padding-left: var(--spacing-7);
    padding-right: var(--spacing-5);
    padding-bottom: var(--spacing-3);
    overflow-y: auto;
  }

  .content_scroller {
    height: 100%;
    overflow-y: scroll;
  }

  .content_container {
    padding-top: var(--spacing-7);
    padding-right: var(--spacing-7);

    /* spacing + sidebar width */
    padding-left: calc(var(--size-4) + var(--spacing-5));

    /* keep padding at spacing-7 on detail page because no sidebar */
    &.is_detail_page {
      padding-left: var(--spacing-7);
    }
  }
}

@media (--large) {
  .app {
    /* total nav height */
    padding-top: var(--size-total-nav);

    &.is_detail_page {
      /* total nav + breadcrumbs height */
      padding-top: calc(var(--size-total-nav) + var(--size-2));
    }
  }

  .sidebar_container {
    width: var(--size-3);

    &.is_detail_page {
      display: block;
    }
  }

  .content_container,
  .content_container.is_detail_page {
    /* spacing + sidebar width */
    padding-left: calc(var(--size-3) + var(--spacing-5));
  }
}

@media (--xlarge) {
  .sidebar_container {
    width: var(--size-4);
  }

  .content_container,
  .content_container.is_detail_page {
    /* spacing + sidebar width */
    padding-left: calc(var(--size-4) + var(--spacing-5));
  }
}

